add mobile responsive card

--- a/public/index.html
+++ b/public/index.html
@@ -85,9 +85,9 @@
                             <img class="mx-auto py-8 w-24" src="/src/images/nextjs.svg" alt="" />
                         </div>
                         <div>
-                            <div class="p-10">
-                                <h2 class="font-bold text-2xl">Next.js Introduction</h2>
-                                <p class="text-gray-500 mt-4 mb-8">Next.js is an open-source development framework built on top of Node.js.</p>
+                            <div class="p-6 md:p-10">
+                                <h2 class="font-bold text-xl md:text-2xl">Next.js Introduction</h2>
+                                <p class="text-gray-500 text-sm md:text-xl mt-4 mb-8">Next.js is an open-source development framework built on top of Node.js.</p>
                                 <a href="" class="bg-blue-400 text-white hover:bg-blue-600 font-bold py-2 px-6 rounded-lg transition-all duration-300">Read</a>
                             </div>
                         </div>
@@ -99,9 +99,9 @@
                             <img class="mx-auto py-8 w-24" src="/src/images/remix.svg" alt="" />
                         </div>
                         <div>
-                            <div class="p-10">
-                                <h2 class="font-bold text-2xl">Remix Introduction</h2>
-                                <p class="text-gray-500 mt-4 mb-8">Remix is a new framework that blurs the line between server and client.</p>
+                            <div class="p-6 md:p-10">
+                                <h2 class="font-bold text-xl md:text-2xl">Remix Introduction</h2>
+                                <p class="text-gray-500 text-sm md:text-xl mt-4 mb-8">Remix is a new framework that blurs the line between server and client.</p>
                                 <a href="" class="bg-blue-400 text-white hover:bg-blue-600 font-bold py-2 px-6 rounded-lg transition-all duration-300">Read</a>
                             </div>
                         </div>
@@ -125,9 +125,9 @@
                             <img class="mx-auto py-8 w-24" src="/src/images/typescript.svg" alt="" />
                         </div>
                         <div>
-                            <div class="p-10">
-                                <h2 class="font-bold text-2xl">TypeScript 101</h2>
-                                <p class="text-gray-500 mt-4 mb-8">NTypeScript is a programming language developed and maintained by Microsoft.</p>
+                            <div class="p-6 md:p-10">
+                                <h2 class="font-bold text-xl md:text-2xl">TypeScript 101</h2>
+                                <p class="text-gray-500 text-sm md:text-xl mt-4 mb-8">NTypeScript is a programming language developed and maintained by Microsoft.</p>
                                 <a href="" class="bg-blue-400 text-white hover:bg-blue-600 font-bold py-2 px-6 rounded-lg transition-all duration-300">Read</a>
                             </div>
                         </div>
@@ -141,9 +141,9 @@
                             <img class="mx-auto py-8 w-24" src="/src/images/phoenix.svg" alt="" />
                         </div>
                         <div>
-                            <div class="p-10">
-                                <h2 class="font-bold text-2xl">Learn Phoenix</h2>
-                                <p class="text-gray-500 mt-4 mb-8">RPhoenix is a web development framework written in the functional programming language Elixir.</p>
+                            <div class="p-6 md:p-10">
+                                <h2 class="font-bold text-xl md:text-2xl">Learn Phoenix</h2>
+                                <p class="text-gray-500 text-sm md:text-xl mt-4 mb-8">RPhoenix is a web development framework written in the functional programming language Elixir.</p>
                                 <a href="" class="bg-blue-400 text-white hover:bg-blue-600 font-bold py-2 px-6 rounded-lg transition-all duration-300">Read</a>
                             </div>
                         </div>
@@ -157,9 +157,9 @@
                             <img class="mx-auto py-8 w-24" src="/src/images/rails.svg" alt="" />
                         </div>
                         <div>
-                            <div class="p-10">
-                                <h2 class="font-bold text-2xl">Learn Ruby on Rails</h2>
-                                <p class="text-gray-500 mt-4 mb-8">Ruby on Rails, or Rails, is a server-side web application framework written in Ruby.</p>
+                            <div class="p-6 md:p-10">
+                                <h2 class="font-bold text-xl md:text-2xl">Learn Ruby on Rails</h2>
+                                <p class="text-gray-500 text-sm md:text-xl mt-4 mb-8">Ruby on Rails, or Rails, is a server-side web application framework written in Ruby.</p>
                                 <a href="" class="bg-blue-400 text-white hover:bg-blue-600 font-bold py-2 px-6 rounded-lg transition-all duration-300">Read</a>
                             </div>
                         </div>
