--- a/public/index.html
+++ b/public/index.html
@@ -55,10 +55,10 @@
         </header>
 
         <section class="px-[7%] pt-36">
-            <div class="flex flex-col-reverse md:flex-row shadow-lg items-center rounded-xl px-3 md:px-8 py-8 gap-0 md:ga40">
+            <div class="flex flex-col-reverse md:flex-row shadow-lg items-center rounded-xl px-6 md:px-8 py-8 gap-0 md:ga40">
                 <div class="px-0 md:px-12 w-full md:w-1/2">
-                    <h1 class="text-4xl md:text-5xl font-bold">Figma Course</h1>
-                    <p class="text-gray-500 my-4">Figma is a vector graphics editor and prototyping tool which is primarily web-based.</p>
+                    <h1 class="text-3xl md:text-5xl font-bold">Figma Course</h1>
+                    <p class="text-gray-500 text-sm md:text-xl my-4">Figma is a vector graphics editor and prototyping tool which is primarily web-based.</p>
 
                     <a href="#" class="bg-gray-100 text-slate-800 font-bold py-2 px-6 hover:bg-gray-200 rounded-md transition-all duration-300 group">
                         Read
