--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <header class="fixed left-0 right-0">
-            <div class="flex items-center justify-center flex-nowrap py-2 bg-gradient-to-r from-purple-500 to-indigo-400 px-2">
+            <div class="flex items-center justify-center flex-nowrap py-2 bg-gradient-to-tr from-purple-500 to-indigo-400 px-2">
                 <p class="bg-white text-purple-500 rounded text-xs px-[4px] font-bold mr-2">NEW</p>
                 <h4 class="text-white text-[12px] font-poppins md:hidden">LearningHub had just been launched! <a href="#" class="hover:underline">Check out</a></h4>
                 <!-- Desktop -->
@@ -73,15 +73,15 @@
 
         <section class="px-[7%] mt-20">
             <div class="flex items-center justify-between">
-                <h3 class="text-xl font-bold">Top</h3>
-                <a href="#" class="text-blue-500 hover:underline">See all</a>
+                <h3 class="text-2xl md:text-3xl font-bold">Top</h3>
+                <a href="#" class="text-lg md:text-xl text-blue-500 hover:underline">See all</a>
             </div>
 
             <!-- Card Class -->
             <div class="flex flex-col md:flex-row gap-20 mt-8">
                 <div class="md:w-1/2">
                     <div class="overflow-hidden rounded-lg shadow-lg">
-                        <div class="bg-gradient-to-r from-purple-500 to-indigo-500 h-48 flex justify-center">
+                        <div class="bg-gradient-to-tr from-purple-500 to-indigo-500 h-48 flex justify-center">
                             <img class="mx-auto py-8 w-24" src="/src/images/nextjs.svg" alt="" />
                         </div>
                         <div>
@@ -95,7 +95,7 @@
                 </div>
                 <div class="md:w-1/2">
                     <div class="overflow-hidden rounded-lg shadow-lg">
-                        <div class="bg-gradient-to-r from-purple-500 to-orange-500 h-48 flex justify-center">
+                        <div class="bg-gradient-to-tr from-purple-500 to-orange-500 h-48 flex justify-center">
                             <img class="mx-auto py-8 w-24" src="/src/images/remix.svg" alt="" />
                         </div>
                         <div>
@@ -112,22 +112,22 @@
 
         <section class="px-[7%] mt-20">
             <div class="flex items-center justify-between">
-                <h3 class="text-xl font-bold">Recent</h3>
-                <a href="#" class="text-blue-500 hover:underline">See all</a>
+                <h3 class="text-2xl md:text-3xl font-bold">Recent</h3>
+                <a href="#" class="text-lg md:text-xl text-blue-500 hover:underline">See all</a>
             </div>
 
             <!-- Card Class -->
-            <div class="flex flex-col md:flex-row gap-20 mt-8">
+            <div class="flex flex-col md:flex-row gap-14 mt-8">
                 <!-- TypeScript Card -->
                 <div class="md:1/2 lg:w-2/6">
                     <div class="overflow-hidden rounded-lg shadow-lg">
-                        <div class="bg-gradient-to-r from-purple-500 to-blue-500 h-48 flex justify-center">
+                        <div class="bg-gradient-to-tr from-purple-500 to-blue-500 h-48 flex justify-center">
                             <img class="mx-auto py-8 w-24" src="/src/images/typescript.svg" alt="" />
                         </div>
                         <div>
                             <div class="p-6 md:p-10">
                                 <h2 class="font-bold text-xl md:text-2xl">TypeScript 101</h2>
-                                <p class="text-gray-500 text-sm md:text-xl mt-4 mb-8">NTypeScript is a programming language developed and maintained by Microsoft.</p>
+                                <p class="text-gray-500 text-sm md:text-lg mt-4 mb-8">NTypeScript is a programming language developed and maintained by Microsoft.</p>
                                 <a href="" class="bg-blue-400 text-white hover:bg-blue-600 font-bold py-2 px-6 rounded-lg transition-all duration-300">Read</a>
                             </div>
                         </div>
@@ -137,13 +137,13 @@
                 <!-- Phoenix Card -->
                 <div class="md:1/2 lg:w-2/6">
                     <div class="overflow-hidden rounded-lg shadow-lg">
-                        <div class="bg-gradient-to-r from-purple-400 to-orange-600 h-48 flex justify-center">
+                        <div class="bg-gradient-to-tr from-purple-400 to-orange-600 h-48 flex justify-center">
                             <img class="mx-auto py-8 w-24" src="/src/images/phoenix.svg" alt="" />
                         </div>
                         <div>
                             <div class="p-6 md:p-10">
                                 <h2 class="font-bold text-xl md:text-2xl">Learn Phoenix</h2>
-                                <p class="text-gray-500 text-sm md:text-xl mt-4 mb-8">RPhoenix is a web development framework written in the functional programming language Elixir.</p>
+                                <p class="text-gray-500 text-sm md:text-lg mt-4 mb-8">RPhoenix is a web development framework written in the functional programming language Elixir.</p>
                                 <a href="" class="bg-blue-400 text-white hover:bg-blue-600 font-bold py-2 px-6 rounded-lg transition-all duration-300">Read</a>
                             </div>
                         </div>
@@ -153,18 +153,51 @@
                 <!-- Rubyonrails card -->
                 <div class="md:1/2 lg:w-2/6">
                     <div class="overflow-hidden rounded-lg shadow-lg">
-                        <div class="bg-gradient-to-r from-emerald-300 to-red-500 h-48 flex justify-center">
+                        <div class="bg-gradient-to-tr from-emerald-300 to-red-500 h-48 flex justify-center">
                             <img class="mx-auto py-8 w-24" src="/src/images/rails.svg" alt="" />
                         </div>
                         <div>
                             <div class="p-6 md:p-10">
                                 <h2 class="font-bold text-xl md:text-2xl">Learn Ruby on Rails</h2>
-                                <p class="text-gray-500 text-sm md:text-xl mt-4 mb-8">Ruby on Rails, or Rails, is a server-side web application framework written in Ruby.</p>
+                                <p class="text-gray-500 text-sm md:text-lg mt-4 mb-8">Ruby on Rails, or Rails, is a server-side web application framework written in Ruby.</p>
                                 <a href="" class="bg-blue-400 text-white hover:bg-blue-600 font-bold py-2 px-6 rounded-lg transition-all duration-300">Read</a>
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <section class="px-[7%] mt-20">
+            <div class="flex items-center justify-between">
+                <h3 class="text-2xl md:text-3xl font-bold">Categories</h3>
+                <a href="#" class="text-lg md:text-xl text-blue-500 hover:underline">See all</a>
+            </div>
+
+            <div class="flex flex-col md:flex-row gap-14 mt-8">
+                <a href="" class="md:1/2 lg:w-2/6">
+                    <div class="overflow-hidden rounded-lg shadow-lg">
+                        <div class="bg-gradient-to-tr from-purple-500 to-red-300 h-28 flex justify-center items-center">
+                            <h2 class="text-2xl text-white font-bold">Code</h2>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="" class="md:1/2 lg:w-2/6">
+                    <div class="overflow-hidden rounded-lg shadow-lg">
+                        <div class="bg-gradient-to-tr from-purple-500 to-blue-400 h-28 flex justify-center items-center">
+                            <h2 class="text-2xl text-white font-bold">Design</h2>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="" class="md:1/2 lg:w-2/6">
+                    <div class="overflow-hidden rounded-lg shadow-lg">
+                        <div class="bg-gradient-to-tr from-orange-300 to-red-500 h-28 flex justify-center items-center">
+                            <h2 class="text-2xl text-white font-bold">prototyping</h2>
+                        </div>
+                    </div>
+                </a>
             </div>
         </section>
 
