--- a/public/index.html
+++ b/public/index.html
@@ -117,7 +117,7 @@
             </div>
 
             <!-- Card Class -->
-            <div class="flex flex-col md:flex-row gap-14 mt-8">
+            <div class="flex flex-col md:flex-row gap-10 md:gap-14 mt-8">
                 <!-- TypeScript Card -->
                 <div class="md:1/2 lg:w-2/6">
                     <div class="overflow-hidden rounded-lg shadow-lg">
@@ -174,32 +174,35 @@
                 <a href="#" class="text-lg md:text-xl text-blue-500 hover:underline">See all</a>
             </div>
 
-            <div class="flex flex-col md:flex-row gap-14 mt-8">
-                <a href="" class="md:1/2 lg:w-2/6">
-                    <div class="overflow-hidden rounded-lg shadow-lg">
-                        <div class="bg-gradient-to-tr from-purple-500 to-red-300 h-28 flex justify-center items-center">
-                            <h2 class="text-2xl text-white font-bold">Code</h2>
-                        </div>
+            <div class="flex flex-col md:flex-row gap-10 md:gap-14 mt-8">
+                <a href="" class="md:1/2 lg:w-2/6 hover:shadow-xl shadow-md duration-300 rounded-lg overflow-hidden">
+                    <div class="bg-gradient-to-tr from-purple-500 to-red-300 h-28 flex justify-center items-center">
+                        <h2 class="text-2xl text-white font-bold">Code</h2>
                     </div>
                 </a>
 
-                <a href="" class="md:1/2 lg:w-2/6">
-                    <div class="overflow-hidden rounded-lg shadow-lg">
-                        <div class="bg-gradient-to-tr from-purple-500 to-blue-400 h-28 flex justify-center items-center">
-                            <h2 class="text-2xl text-white font-bold">Design</h2>
-                        </div>
+                <a href="" class="md:1/2 lg:w-2/6 hover:shadow-xl shadow-md duration-300 rounded-lg overflow-hidden">
+                    <div class="bg-gradient-to-tr from-purple-500 to-blue-400 h-28 flex justify-center items-center">
+                        <h2 class="text-2xl text-white font-bold">Design</h2>
                     </div>
                 </a>
 
-                <a href="" class="md:1/2 lg:w-2/6">
-                    <div class="overflow-hidden rounded-lg shadow-lg">
-                        <div class="bg-gradient-to-tr from-orange-300 to-red-500 h-28 flex justify-center items-center">
-                            <h2 class="text-2xl text-white font-bold">prototyping</h2>
-                        </div>
+                <a href="" class="md:1/2 lg:w-2/6 hover:shadow-xl shadow-md duration-300 rounded-lg overflow-hidden">
+                    <div class="bg-gradient-to-tr from-orange-300 to-red-500 h-28 flex justify-center items-center">
+                        <h2 class="text-2xl text-white font-bold">prototyping</h2>
                     </div>
                 </a>
             </div>
         </section>
+
+        <footer class="px-[7%] py-10 flex items-center justify-between flex-col md:flex-row gap-5">
+            <h5 class="text-slate-500">© learn.to</h5>
+            <div class="flex flex-col md:flex-row gap-5 items-center">
+                <a href="" class="text-slate-400 hover:text-slate-600 duration-300">Cookies</a>
+                <a href="" class="text-slate-400 hover:text-slate-600 duration-300">Terms of Service</a>
+                <a href="" class="text-slate-400 hover:text-slate-600 duration-300">Privacy Policy</a>
+            </div>
+        </footer>
 
         <script src="/public/main.js"></script>
     </body>
